--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2 class="lead">Entrega Ejercicio Web de Producto - Belluccia II</h2>
                 <h1>Goldberg Iván</h1>
                 <p style="margin-top:50px">
-                    <a class="btn btn-primary btn-lg" href="https://ivangoldberg.github.io/PREENTREGA-VERSION-1/">Sitio desarrollado</a> 
+                    <a class="btn btn-primary btn-lg" href="https://ivangoldberg.github.io/TpWeb_Goldberg_Ivan/">Sitio desarrollado</a> 
                     <a class="btn btn-default btn-lg" href="https://freehtml5.co/preview/?item=ranger-free-website-template-using-bootstrap">Template utilizado</a>
                 </p>
             </div>
